--- a/asg1/index.html
+++ b/asg1/index.html
@@ -8,6 +8,8 @@
 
 <body>
     <script src="js/sketch.js"></script>
+    <script src="js/particle.js"></script>
+    <script src="js/particle-system.js"></script>
 </body>
 
 </html>
