--- a/asg1/index.html
+++ b/asg1/index.html
@@ -3,13 +3,15 @@
 <head>
     <title>CMPM147</title>
     <link rel="stylesheet" type="text/css" href="css/style.css"></link>
-    <script src="lib/p5.js"></script>
 </head>
 
 <body>
-    <script src="js/sketch.js"></script>
-    <script src="js/particle.js"></script>
-    <script src="js/particle-system.js"></script>
+    <script language="javascript" type="text/javascript" src="lib/p5.js"></script>
+    <script language="javascript" type="text/javascript" src="lib/p5.dom.js"></script>
+    <script language="javascript" type="text/javascript" src="lib/p5.sound.js"></script>
+    <script language="javascript" type="text/javascript" src="js/sketch.js"></script>
+    <script language="javascript" type="text/javascript" src="js/particle.js"></script>
+    <script language="javascript" type="text/javascript" src="js/particle-system.js"></script>
 </body>
 
 </html>
