--- a/asg2/index.html
+++ b/asg2/index.html
@@ -7,6 +7,7 @@
 
 <body>
     <script language="javascript" type="text/javascript" src="lib/p5.js"></script>
+    <script language="javascript" type="text/javascript" src="lib/p5.dom.js"></script>
     <script language="javascript" type="text/javascript" src="js/sketch.js"></script>
     <script language="javascript" type="text/javascript" src="js/world-generator.js"></script>
 </body>
